--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- .container>.todo-app -->
+    <div class="container">
+      <div class="todo-app">
+        <h1>To-Do App</h1>
+        <form action="" class="input-area">
+          <input
+            type="text"
+            name=""
+            id="task-input"
+            placeholder="Add a new task..."
+          />
+          <button type="submit" id="add-task.btn">
+            <i class="fa-solid fa-plus"></i>
+          </button>
+        </form>
+        <div class="todos-container">
+          <ul id="task-list"></ul>
+          <img class="empty-image" src="images/cartoon.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
